Commit da aula '2.2. Aprenda o ciclo vermelho-verde-refatora' projeto desenvolvido em aula

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>exercio-para-praticar-TDD-3</name>
+	<name>pedido-vendas</name>
 	<comment></comment>
 	<projects>
 	</projects>
